--- a/src/main/resources/templates/medico/diagnostico/diagnostico.html
+++ b/src/main/resources/templates/medico/diagnostico/diagnostico.html
@@ -58,6 +58,7 @@
                                     <th>Medicamento</th>
                                     <th>Dosagem</th>
                                     <th>Frequência</th>
+                                    <th>Período</th>
                                     <th style="text-align: right;">Ações</th>
                                 </tr>
                             </thead>
@@ -66,6 +67,8 @@
                                     <td th:text="${prescricao.medicamento}"></td>
                                     <td th:text="${prescricao.dosagem}"></td>
                                     <td th:text="${prescricao.frequencia}"></td>
+                                    <td> <span th:text="${#temporals.format(prescricao.dataInicio, 'dd/MM/yy')}"></span> até
+                                    <span th:text="${#temporals.format(prescricao.dataFim, 'dd/MM/yy')}"></span>></td>
                                     <td style="text-align: right;">
                                         <a th:href="@{/medico/prescricao/editar/{id}(id=${prescricao.id})}" class="btn btn-secondary">Editar</a>
                                         <form th:action="@{/medico/prescricao/excluir/{id}(id=${prescricao.id})}" method="post" style="display:inline;" onsubmit="return confirm('Deseja realmente excluir?');">
@@ -83,7 +86,7 @@
                 <div class="card-header">
                      <h2><i class="bi bi-plus-circle-fill"></i> Adicionar Nova Prescrição</h2>
                 </div>
-                <form th:action="@{/medico/prescricao/adicionar}" method="post">
+                <form th:action="@{/medico/prescricao/adicionar-prescricao}" method="post">
                     <div class="card-body">
                         <input type="hidden" name="diagnosticoId" th:value="${consulta.diagnostico.id}" />
                         <div class="form-group">
